<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name_details"
            style="@style/NameListItemAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:hint="@string/product_hint" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:text="@string/quantity_view"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp">
        <ImageView
            android:id="@+id/image_details"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

            <View
                android:id="@+id/line_top"
                android:layout_width="120dp"
                android:layout_height="4dp"
                android:background="@color/colorAccent">
            </View>

            <View
                android:layout_width="4dp"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:background="@color/colorAccent">
            </View>

            <View
                android:id="@+id/line_right"
                android:layout_width="4dp"
                android:layout_height="120dp"
                android:layout_toRightOf="@id/line_top"
                android:background="@color/colorAccent"></View>

            <View
                android:layout_width="120dp"
                android:layout_height="4dp"
                android:layout_marginLeft="1dp"
                android:layout_alignBottom="@id/line_right"
                android:background="@color/colorAccent">
            </View>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/quantity_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textAlignment="center"
                android:hint="                         "/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrement_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/increment_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="12dp"
                    android:text="+"
                    android:textSize="22sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:text="@string/image_info"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:text="$"/>
        <EditText
        android:id="@+id/price_details"
        style="@style/PriceListItemAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
        android:hint="@string/price_hint" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="18dp"
        android:background="@color/colorAccent"></View>

    <TextView
        style="@style/NameListItemAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/supplier_view" />

    <EditText
        android:id="@+id/name_supplier"
        style="@style/QuantityItemAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="22dp"
        android:hint="@string/supplier_name_hint" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email_supplier"
            style="@style/QuantityItemAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="18dp"
            android:hint="@string/email_address" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="4dp"
            android:text="@string/button_order" />
    </LinearLayout>


</LinearLayout>